# cf-mcp

./: .gitignore  README.md  pyproject.toml  test.py
cf_mcp.egg-info/: PKG-INFO  SOURCES.txt
cf_mcp_orange.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cpmcp_oren.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cf_mcp_orange.egg-info/: PKG-INFO  SOURCES.txt
src/cpmcp_oren/: __init__.py
src/cpmcp_oren/tools/: get_problem.py  get_status.py  get_upsolve.py  get_user.py
tools/: compare_user.py  get_practice.py  get_problem.py  get_problemlist.py  get_random_problem.py
