[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cf-mcp-orange"
version = "1.0.6"
description = "A complete Codeforces MCP toolset for AI agents"
readme = "README.md"
authors = [{name = "supriya", email = "supriya81205@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.2",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0"
]

# This is the magic that makes "uvx cf-mcp-orange" work
[project.scripts]
cf-mcp-orange = "cpmcp_oren:main"

[tool.setuptools.packages.find]
where = ["src"]